# kuramoto-model-simulator

./: .gitignore  Makefile  README.md
docs/: index.html  kuramoto_model_simulator.js  main.js  style.css
src/: .gitignore  Makefile  README.md  demo.py  explore.py  index.html  ksim.c  ksim.cu  ksim.py  ksim_c.c  ksim_c.h  ksim_c.py  ksim_torch.py  main.c  main.js  main_ksim_c.c  optimize.py  pyproject.toml  style.css
viewer/: Makefile  main.py  pyproject.toml
