[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pandas = "^2.2.2"
torch = "^2.4.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"
dvc = "^3.55.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
